--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>RedTetris</title>
   </head>
-  <body   style="min-height: 100%; background-color: #C62828;">
+  <body style="min-height: 100%; width:100%;background-size: cover; background-attachment:fixed; background-image: url('%PUBLIC_URL%/bg.jpg')");>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="min-height: 100%;"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
